src/snapshots/slate__quadlet__tests__process_quadlets_bookstack-db.container.snap
---
source: src/quadlet.rs
expression: "serde_ini::to_string(&i).unwrap()"
---
[Container]
Image=lscr.io/linuxserver/mariadb
Pod=bookstack.pod
AutoUpdate=registry
[Service]
Restart=always
EnvironmentFile=/tmp/slater/.env
[Unit]
After=local-fs.target network-online.target systemd-networkd-wait-online.service
